--- a/templates/room.html
+++ b/templates/room.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/css/room.css" />
         <title>webmcast -- {{.ID}}</title>
     </head>
-    <body data-stream-id="{{.ID}}">
+    <body data-stream-id="{{.ID}}" {{if .Owned}}class="owned"{{end}}>
         <article class="content" data-scrollbar>
             {{ template "nav.html" . }}
 
