Refactor client-side scripts, part 1.

--- a/templates/form-user-new.html
+++ b/templates/form-user-new.html
@@ -1,5 +1,5 @@
 <h2 data-tab="signup">Sign up</h2>
-<form method="POST" action="/user/new">
+<form method="POST" action="/user/new" data-xhrable>
     <label for="username">Username</label>
     <input name="username" type="text" required tabindex="1" />
     <label for="password">Password</label>
