--- a/templates/form-user-restore.html
+++ b/templates/form-user-restore.html
@@ -1,5 +1,5 @@
 <h2 data-tab="restore">Password reset</h2>
-<form method="POST" action="/user/reset">
+<form method="POST" action="/user/reset" data-xhrable>
     <label for="username">Username</label>
     <input name="username" type="text" tabindex="1" />
     <p class="notice">&mdash; or &mdash;</p>
