--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,17 +1,19 @@
-<nav class="center-block" {{if .User}}data-user="{{.User.Login}}"{{end}}>
+<nav class="center-block">
     <a href="/" class="brand">webmcast</a>
     <div class="search">{{/* TODO, maybe?... */}}</div>
+{{ if .User }}
     <span class="userinfo">
-        Hi, <a class="username" href="/user/cfg">{{if .User}}{{.User.Login}}{{end}}</a>.
+        Hi, <a class="username" href="/user/cfg">{{.User.Login}}</a>.
     </span>
-    <a tabindex="0" class="login"  href="/user/login">Log in</a>
     <a tabindex="0" class="logout" href="/user/logout">Log out</a>
+{{- else -}}
+    <a tabindex="0" class="login"  href="/user/login">Log in</a>
     <a tabindex="0" class="signup" href="/user/new">Sign up</a>
+{{- end -}}
 </nav>
 
-{{ if . }}
-<template id="login-form">
-    <div data-tabs="login" class="with-bg">
+<template id="login-template">
+    <div data-tabs="login" class="with-bg" data-modal>
         <div class="login-form">
             {{ template "form-user-login.html" }}
         </div>
@@ -23,4 +25,3 @@
         </div>
     </div>
 </template>
-{{ end }}
