--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,19 +1,17 @@
 <nav class="center-block">
     <a href="/" class="brand">webmcast</a>
-    <div class="search">{{/* TODO, maybe?... */}}</div>
+    <span class="spacer"></span>
 {{ if .User }}
-    <span class="userinfo">
-        Hi, <a class="username" href="/user/cfg">{{.User.Login}}</a>.
-    </span>
+    <span class="userinfo">Hi, <a class="username" href="/user/cfg">{{.User.Login}}</a>.</span>
     <a tabindex="0" class="logout" href="/user/logout">Log out</a>
 {{- else -}}
     <a tabindex="0" class="login"  href="/user/login">Log in</a>
-    <a tabindex="0" class="signup" href="/user/new">Sign up</a>
+    <button tabindex="0" class="alt signup" href="/user/new">Sign up</button>
 {{- end -}}
 </nav>
 
 <template id="login-template">
-    <div data-tabs="login" class="with-bg" data-modal>
+    <div data-tabs="login" data-modal>
         <div class="login-form">
             {{ template "form-user-login.html" }}
         </div>
