--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,7 +6,7 @@
     <a tabindex="0" class="logout" href="/user/logout">Log out</a>
 {{- else -}}
     <a tabindex="0" class="login"  href="/user/login">Log in</a>
-    <button tabindex="0" class="alt signup" href="/user/new">Sign up</button>
+    <a tabindex="0" class="text-button signup" href="/user/new">Sign up</a>
 {{- end -}}
 </nav>
 
