--- a/static/css/global.css
+++ b/static/css/global.css
@@ -345,6 +345,8 @@ footer {
 .meta h1 {
     margin: 0;
     font-size: 1.6em;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .meta h2 {
@@ -354,16 +356,19 @@ footer {
 }
 
 .meta .avatar {
+    flex-shrink: 0;
     margin-right: 1em;
     width: 60px;
     height: 60px;  /* ~= 58.8px = 4.2em = (h1.font-size + h2.font-size) * line-height */
 }
 
-.meta :nth-child(2) {
+.meta > :nth-child(2) {
     flex: 1;
+    max-width: 100%;
+    overflow: hidden;
 }
 
-.meta :nth-child(3) h2 {
+.meta > :nth-child(3) h2 {
     margin-left: 1em;
 }
 
