Split the thing into packages.
First step towards separating the stream-broadcasting part
and the user-and-chat-handling one.

--- a/templates/room.html
+++ b/templates/room.html
@@ -46,7 +46,7 @@
                 </div>
                 <div>
                     <h2 class="viewers" title="Viewers">
-                        {{ if .Stream }}{{len .Stream.Chat.Users}}{{ else }}0{{ end }}
+                        {{ if .Chat }}{{len .Chat.Users}}{{ else }}0{{ end }}
                     </h2>
                 </div>
             </header>
