Do not display current viewer count until the WebSocket connects.
This data is available to the node hosting the stream,
but not necessarily to the node rendering the page.

The chat must reside on the same node as the stream for three
reasons:
  1. all clients must connect to the same node anyway, might
     as well be that one;
  2. cheapest possible load balancing;
  3. I might add some RPC calls to request switching over
     to a stream with a different bitrate.

--- a/templates/room.html
+++ b/templates/room.html
@@ -33,14 +33,10 @@
                 <div>
                     <h1 class="name">{{or .Meta.Name (printf "#%s" .ID)}}</h1>
                     <h2 class="creator">{{or .Meta.UserName "anonymous"}}</h2>
-                {{ if not .Online }}
-                    <h2 class="offline">is now offline.</h2>
-                {{- end -}}
+                    {{ if not .Online }}<h2 class="offline">is now offline.</h2>{{- end -}}
                 </div>
                 <div>
-                    <h2 class="viewers" title="Viewers">
-                        {{ if .Chat }}{{len .Chat.Users}}{{ else }}0{{ end }}
-                    </h2>
+                    <h2 class="viewers" title="Viewers">???</h2>
                 </div>
             </header>
 
