Split the thing into two nodes.
Package `broadcast` now contains the retransmission node,
while the main package only provides an UI.

TODO:

  * Have the UI node determine which server streams should go to.

  * Fix the "Publish" URL in the UI.

  * Map node IDs to URLs in a better way than client-side
    string concatenation.

  * Rewrite the "usage" section of the README.

--- a/templates/room.html
+++ b/templates/room.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/css/room.css" />
         <title>webmcast -- {{.ID}}</title>
     </head>
-    <body data-stream-id="{{.ID}}" {{if .Owned}}data-owned{{end}}>
+    <body data-stream-id="{{.ID}}" data-server="{{.Meta.Server}}" {{if .Owned}}data-owned{{end}}>
         <article class="content" data-scrollbar>
             {{ template "nav.html" . }}
 
