--- a/static/css/global.css
+++ b/static/css/global.css
@@ -106,15 +106,15 @@ canvas {
     border-bottom-width: 4px;
 }
 
-[data-xhrable] {
+form {
     position: relative;
 }
 
-[data-xhrable] .error {
+form .error {
     color: #900;
 }
 
-[data-xhrable]:not(.error) .error {
+form:not(.error) .error {
     display: none;
 }
 
@@ -194,7 +194,7 @@ button:not(:disabled) {
 
 button:focus {
     outline: none;
-    box-shadow: 0 0 10px #f7d358;
+    box-shadow: 0 0 5px #f7d358;
 }
 
 button:active {
@@ -205,6 +205,18 @@ button:disabled {
     color: #999;
     border-color: rgba(0,0,0,0.06);
     background-color: #fafafa;
+}
+
+button[type="reset"] {
+    background-color: #f0f0f0;
+}
+
+button[type="reset"]:focus {
+    box-shadow: 0 0 5px #ddd;
+}
+
+button[type="reset"]:active {
+    background-color: #ddd;
 }
 
 a.text-button {
